# server-faces-benchmark

./: .gitignore  README.md
asf/: .gitignore  Makefile  Makefile.conf.in  asfbench.gpr.in  asfbench.properties  configure  configure.ac
asf/bundles/: asfbench.properties
asf/src/: asfbench-applications.adb  asfbench-applications.ads  asfbench-server.adb  asfbench.ads
asf/web/WEB-INF/: ajax.taglib.xml  faces-config.xml  utils.taglib.xml  web.xml
asf/web/WEB-INF/layouts/: layout.xhtml
myfaces/: pom.xml
myfaces/src/main/java/org/ciceron/jsfbenchmark/: HttpSessionListener.java
myfaces/src/main/java/org/ciceron/jsfbenchmark/ui/: UIFile.java  UIFlush.java  UIInclude.java  UIScript.java
myfaces/src/main/webapp/WEB-INF/: web.xml
myfaces/src/main/webapp/WEB-INF/layouts/: example.xhtml
