dnl Autoconf configure script for asfbench

dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/asfbench.ads)

AM_GNAT_LIBRARY_PROJECT(asfbench)

# Current release settings
ASFBENCH_MAJOR_VERSION=0
ASFBENCH_MINOR_VERSION=1
ASFBENCH_MICRO_VERSION=0
ASFBENCH_VERSION=$ASFBENCH_MAJOR_VERSION.$ASFBENCH_MINOR_VERSION.$ASFBENCH_MICRO_VERSION

# Set the version number of the project
AC_SUBST(ASFBENCH_VERSION)
AC_SUBST(ASFBENCH_MAJOR_VERSION)
AC_SUBST(ASFBENCH_MINOR_VERSION)
AC_SUBST(ASFBENCH_MICRO_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)
ASFBENCH_LIBDIR="lib"
AC_SUBST(ASFBENCH_LIBDIR)

AM_GNAT_FIND_ADA_UTIL([asfbench])
AM_GNAT_FIND_ADA_EL([asfbench])
AM_GNAT_FIND_ADA_SECURITY([asfbench])
AM_GNAT_FIND_ADA_SERVLET([asfbench])
AM_GNAT_FIND_ADA_SERVER_FACES([asfbench])

AC_OUTPUT(
Makefile.conf
asfbench.gpr
)
